...
                        color = MaterialTheme.colorScheme.surface,
                        tonalElevation = 2.dp
                    ) {
                        TextField(
                            value = mainTextState,
                            onValueChange = { viewModel.updateMainText(it) },
                            modifier = Modifier.fillMaxSize().testTag("main_input"),
                            colors = TextFieldDefaults.colors(
                                focusedContainerColor = Color.Transparent,
                                unfocusedContainerColor = Color.Transparent,
                                disabledContainerColor = Color.Transparent,
                                focusedIndicatorColor = Color.Transparent,
                                unfocusedIndicatorColor = Color.Transparent,
...
                                color = MaterialTheme.colorScheme.surface,
                                tonalElevation = 2.dp
                            ) {
                                TextField(
                                    value = findText,
                                    onValueChange = { viewModel.setFindText(it) },
                                    modifier = Modifier.fillMaxWidth().testTag("find_input"),
                                    colors = TextFieldDefaults.colors(
                                        focusedContainerColor = Color.Transparent,
                                        unfocusedContainerColor = Color.Transparent,
                                        disabledContainerColor = Color.Transparent,
                                        focusedIndicatorColor = Color.Transparent,
                                        unfocusedIndicatorColor = Color.Transparent,
...
                                color = MaterialTheme.colorScheme.surface,
                                tonalElevation = 2.dp
                            ) {
                                TextField(
                                    value = replaceText,
                                    onValueChange = { viewModel.setReplaceText(it) },
                                    modifier = Modifier.fillMaxWidth().testTag("replace_input"),
                                    colors = TextFieldDefaults.colors(
                                        focusedContainerColor = Color.Transparent,
                                        unfocusedContainerColor = Color.Transparent,
                                        disabledContainerColor = Color.Transparent,
                                        focusedIndicatorColor = Color.Transparent,
                                        unfocusedIndicatorColor = Color.Transparent,
...
            }
        },
        trailingButton = {
            SplitButtonDefaults.TrailingButton(
                onClick = { viewModel.incrementCounter() },
                enabled = findText.isNotEmpty(),
                modifier = Modifier.testTag("find_next_button")
            ) {
                Icon(
                    painterResource(id = R.drawable.ic_arrow_right),
                    contentDescription = null
                )
            }
...
    SplitButtonLayout(
        modifier = modifier,
        leadingButton = {
            SplitButtonDefaults.LeadingButton(
                onClick = { viewModel.replaceFirst() },
                enabled = (replaceText.isNotEmpty() && counterTotal > 0),
                modifier = Modifier.testTag("replace_button")
            ) {
                Icon(
                    painter = painterResource(id = R.drawable.ic_done),
                    contentDescription = null,
                )
            }
        },
        trailingButton = {
            SplitButtonDefaults.TrailingButton(
                onClick = { viewModel.replaceAll() },
                enabled = (replaceText.isNotEmpty() && counterTotal > 0),
                modifier = Modifier.testTag("replace_all_button")
            ) {
                Icon(
                    painter = painterResource(id = R.drawable.ic_done_all),
                    contentDescription = null
                )
            }
...
        ) {
            FilledIconButton(
                onClick = {
                    viewModel.setIgnoreCase(!ignoreCase)
                },
                colors = if (ignoreCase) IconButtonDefaults.outlinedIconButtonColors() else IconButtonDefaults.filledIconButtonColors(),
                modifier = Modifier.testTag("ignore_case_button")
            ) {
                Icon(painterResource(R.drawable.ic_title), contentDescription = null)
            }
            IconButton(
                onClick = { viewModel.undo() },
                enabled = undoState,
                modifier = Modifier.testTag("undo_button")
            ) {
                Icon(
                    painter = painterResource(id = R.drawable.ic_undo),
                    contentDescription = null
                )
            }
            IconButton(
                onClick = { viewModel.redo() },
                enabled = redoState,
                modifier = Modifier.testTag("redo_button")
            ) {
                Icon(
                    painter = painterResource(id = R.drawable.ic_redo),
                    contentDescription = null
                )
            }
            IconButton(
                onClick = { viewModel.reset() },
                modifier = Modifier.testTag("reset_button")
            ) {
                Icon(
                    painter = painterResource(id = R.drawable.ic_reset),
                    contentDescription = null
                )
            }
...
