...
    <string name="whatsapp">WhatsApp</string>
    <string name="wup_title">Text unsaved numbers in WhatsApp</string>
    <string name="wup_desc">Easily text any unsaved number in WhatsApp. Useful if you want to text people for temporary purposes.</string>

    <string name="context_menu_eval">[T\u00B2] Evaluate</string>
    <string name="eval_title">Evaluate mathematical expressions</string>
    <string name="eval_title_small">Evaluate</string>
    <string name="eval_desc">Evaluate mathematical expressions inline and replace the expression with its result. Works only on text selected that can be edited.</string>
    <string name="invalid_expression">Invalid mathematical expression</string>

    <string name="app_info">App Info</string>
    <string name="version">Version</string>
    <string name="app_version">Version - %1$s (%2$d)</string>
    <string name="releases_desc">Check out the latest releases and changelog on GitHub.</string>

    <string name="oss_info">Open Source</string>
    <string name="oss_desc">This app is open source! Feel free to contribute, raise issue and check it out.</string>
    <string name="oss_check">Check it out</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prepend_country_code_title">Automatically add country code</string>
    <string name="prepend_country_code_desc">If the selected phone number does not have any country code, the preset country code will be automatically added if enabled.</string>
    <string name="messaging">Messaging</string>
    <string name="preset_country_code">Preset country code</string>
    <string name="decimal_points_title">Decimal points</string>
    <string name="decimal_points_desc">Number of digits shown after the decimal point as a result of an evaluate function. If the result is an integer (whole number with no decimal), the decimal point will not be shown.</string>
    <string name="releases">Releases page</string>

    <string name="context_menu_transform">[T\u00B2] Transform</string>
    <string name="transform">Transform</string>
    <string name="transform_message">Select how you want to transform the text</string>
    <string name="transform_long">Transform text</string>
    <string name="transform_desc">Provides various ways to transform the selected text like changing its case, wrapping it with other text and more.</string>
...

    <string name="enable_preview">Enable preview</string>
    <string name="wrap_result">Result - %1$s</string>

    <string name="editable_error">This option works only on editable text input</string>
    <string name="previewed_text_truncated">Previewed result is truncated. Transformation will be applied to the entire selection.</string>
    <string name="donate">Donate</string>
    <string name="donate_msg">Do you like this app? If so, you can make a small donation. This helps to keep me motivated and work on this project to make it even better.</string>
    <string name="context_menu_save">[T\u00B2] Save</string>
    <string name="save_text_title">Save text</string>
    <string name="save_text_message">Save the selected text so that you can access it later</string>
    <string name="save_text_desc">Lets you save the selected text (to some file) so that you can access it later.</string>
    <string name="save_option_txt">As .txt file</string>
    <string name="save_option_note">As a note</string>
...
    <string name="repeat_text">Repeat text</string>
    <string name="remove_text">Remove text</string>
    <string name="add_prefix_suffix">Add prefix/suffix</string>
    <string name="number_lines">Number lines</string>
    <string name="reverse_text">Reverse text</string>
    <string name="preview">Preview</string>
    <string name="input">Input text</string>
    <string name="none">None</string>
    <string name="remove_first">Remove first</string>
    <string name="remove_last">Remove last</string>
    <string name="remove_all">Remove all</string>
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>
...
    <string name="remove_empty_lines">Remove empty lines</string>
    <string name="remove_duplicate_words">Remove duplicate words</string>
    <string name="remove_duplicate_words_case_sensitive">Remove duplicate words (case sensitive)</string>
    <string name="remove_duplicate_lines">Remove duplicate lines</string>
    <string name="remove_duplicate_lines_case_sensitive">Remove duplicate lines (case sensitive)</string>
    <string name="cursive">Cursive</string>
    <string name="text_count">Text Analysis</string>
    <string name="characters">Characters</string>
    <string name="letters">Letters</string>
    <string name="words">Words</string>
    <string name="digits">Digits</string>
    <string name="spaces">Spaces</string>
    <string name="symbols">Other symbols</string>
    <string name="word_frequency">Word frequency</string>
    <string name="statistics">Statistics</string>
    <string name="context_menu_text_count">[T\u00B2] Text Analysis</string>
    <string name="text_count_desc">Get detailed analysis about character count, word count, letter count and more for the selected text.</string>
    <string name="title_activity_on_boarding">Onboarding</string>
    <string name="mode_select_title">Context menu options</string>
    <string name="mode_select_desc">Choose how you would like the context menu options to appear when you select text. It can also be changed later in the settings.</string>
    <string name="mode_single_title">Single option</string>
    <string name="mode_single_desc">Only one context menu option will appear which when clicked will reveal all the supported actions</string>
    <string name="mode_multi_title">Multiple options</string>
    <string name="mode_multi_desc">All the actions supported by the app will be shown in the context menu</string>
    <string name="edit_modes">It is also possible to choose which options should be available in the context menu.</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="app">App</string>
    <string name="invalid_country_code">Invalid country code</string>
    <string name="line_break">Line break</string>
    <string name="replace_whitespace">Replace whitespace</string>
    <string name="after_certain_characters">After certain characters</string>
    <string name="after_certain_words">After certain words</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
...
    <string name="enter_text_here">Enter text here</string>
    <string name="preview_text_placeholder">Previewed text appears here</string>
    <string name="prepend_lines">Prepend lines</string>
    <string name="append_lines">Append lines</string>
    <string name="generic_error">Unexpected error occurred</string>
    <string name="monospace">Monospace</string>
    <string name="visualizations">Visualizations</string>
    <string name="all_words">All Words</string>
    <string name="advanced_features">Advanced Features</string>
    <string name="longest_repeated_substring">Longest Repeated Substring</string>
    <string name="run_length_encoding">Run Length Encoding</string>
    <string name="longest_palindrome">Longest Palindrome</string>
    <string name="longest_increasing_subsequence">Longest Increasing Subsequence</string>
    <string name="emails">Emails</string>
    <string name="phone_numbers">Phone Numbers</string>
...
