...
                    InputSection(inputText) { viewModel.setTextAndProcess(it) }
                }
                LazyColumn(
                    modifier = Modifier
                        .weight(1f)
                        .padding(16.dp)
                        .testTag("stats_list"),
                    verticalArrangement = Arrangement.spacedBy(16.dp)
                ) {
                    statsContent(countResult, context)
                }
            }
        } else {
...
